--- a/memes/index.html
+++ b/memes/index.html
@@ -20,7 +20,6 @@
     <script src="https://cdn.jsdelivr.net/npm/omggif@1.0.10/omggif.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gif.js/dist/gif.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gif.js/dist/gif.worker.js"></script>
-    <script type="module" src="/src/main.jsx"></script>
     <script defer>
       // Basic references
       let gifInfo = null;
@@ -1440,5 +1439,6 @@
 
       initDrawCanvas();
     </script> -->
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
